# Edgars-mobile-auto-shop

./: .ci-ping  .coveragerc  .dockerignore  .env  .env.ci  .env.example  .gitignore  .gitleaks.toml  .pre-commit-config.yaml  .ruff-full.toml  ADMIN_SECURITY_VULNERABILITIES.py  AGENTS.md  APPOINTMENTS_PROOF_LOCKED.md  APPOINTMENT_SCHEDULING_FOUNDATION_COMPLETE.md  AWS_DEPLOYMENT_COMPLETE.md  AWS_OIDC_SETUP.md  BLUE_GREEN_DEPLOYMENT_CHECKLIST.md  BUTTON_ENHANCEMENT_COMPLETE.md  CHANGELOG.md  CI-STATUS.md  CICD_HARDENING_MISSION_COMPLETE.md  CICD_HARDENING_PRODUCTION_DEPLOYMENT_COMPLETE.md  CI_STRICT_001_ROBUSTNESS_ANALYSIS.md  CI_VERIFICATION_CHECKLIST.md  COMPREHENSIVE_HARDENING_INITIATIVE_COMPLETE.md  CONTAINER_SECURITY_HARDENING_REPORT.md  CORE_BUSINESS_LOGIC_EPIC_COMPLETE.md  CORRECTED_REFACTORING_BLUEPRINT.md  CROSS_TENANT_VULNERABILITIES_FIXED.md  CUSTOMER_SEARCH_IMPLEMENTATION_COMPLETE.md  DEPLOYMENT.md  DEPLOYMENT_RUNBOOK.md  DEPLOYMENT_RUNBOOK_V2.md  DEPLOY_PHASE2_COMMANDS.sh  DEVELOPMENT.md  Dockerfile  Dockerfile.lambda  Dockerfile.minimal  EMERGENCY_CONTAINER_HARDENING_COMPLETION_REPORT.md  ENDPOINT_HARDENING_PROGRESS.md  (+251 more)
.cursor-tasks/: frontend-import-aliases-verify.yaml  ide-scope-tailwind.yaml
.github/: ARCHITECTURE.md  PROJECT_PLAN.md  README.md  branch-protection-setup.json  coding-guidelines.md  pull_request_template.md  setup-branch-protection.sh
audit_artifacts/: 01_authentication_authorization_audit.md  01_authentication_authorization_debrief.md  02_security_data_isolation_audit.md  02_security_data_isolation_debrief.md  03_ui_ux_completeness_audit.md  03_ui_ux_completeness_debrief.md  04_api_data_flow_audit.md  04_api_data_flow_debrief.md  05_test_coverage_gaps_audit.md  05_test_coverage_gaps_debrief.md  06_performance_scalability_audit.md  07_INFRASTRUCTURE_DEPLOYMENT_AUDIT_CLOSED.md  07_infrastructure_deployment_audit.md  07_infrastructure_deployment_debrief.md  07_phase1_discovery_summary.md  07_phase2_config_secrets_summary.md  PHASE5_CICD_PIPELINE_RELIABILITY_AUDIT.md  (+46 more)
(+1548 files in other folders)
